# Aviv-QA-Web-Technical-Test

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  index.html  pyproject.toml
.github/workflows/: github-ci.yml
13/: index.html
13/export/: influxDbData.txt
14/: index.html
14/export/: influxDbData.txt
15/: index.html
15/data/: behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
15/export/: influxDbData.txt  prometheusData.txt
15/history/: history.json
15/widgets/: categories-trend.json  duration-trend.json  environment.json  executors.json  history-trend.json  retry-trend.json  severity.json  status-chart.json  summary.json
16/: index.html
16/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
16/export/: influxDbData.txt  prometheusData.txt
16/history/: categories-trend.json  history-trend.json  history.json  retry-trend.json
16/widgets/: duration-trend.json  duration.json  executors.json  severity.json  summary.json
17/: index.html
17/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
17/export/: influxDbData.txt  prometheusData.txt
17/history/: categories-trend.json  history-trend.json  history.json  retry-trend.json
17/widgets/: duration-trend.json  duration.json  executors.json  severity.json  summary.json
18/: index.html
18/data/: behaviors.json  categories.json  packages.json  (+3 more)
tests/: conftest.py  test_cart_functionality.py  test_existing_user_login_and_checkout.py  test_invalid_signup.py  test_user_signup_and_checkout.py
(+59 files in other folders)
